2008-03-07  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/QuickReports.py: optionally pass in kwargs
	* src/plugins/DefaultGramplets.py: added generation summary to pedigree
	* src/plugins/FilterByName.py: new filter "people by list"
	* src/DataViews/GrampletView.py: handle "people by list" links

2008-03-07  Peter Landgren  <peter.talken@telia.com>
    * src/GrampsCfg.py
    * src/Config/_GrampsConfigKeys.py
    * data/gramps.schemas.in
    Removal of xml-autobackup issue #1897

2008-03-07  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/GrampletView.py (GrampletView): 
	turned GrampletView into a PersonNavView to get Forward/Next/Home

2008.03.06 Jim Sack <jgsack@san.rr.com>
	* src/GrampsDbUtils/_WriteGedcom.py: #1849 gedcom output: omit 'Y'
	when there is subpordinate data in event (person or family)

2008.03.06 Jim Sack <jgsack@san.rr.com>
	* src/test/gedread_util.py: update test utility per r10169 changes that
	removed the "TRANSACTIONS" option. 

2008-03-06 Jason Simanek <jsimanek@gmail.com>
	* src/NarrativeWeb.py: 
	* src/images/NWeb_Mainz_Header.png: added
	* src/images/somerights20.gif: modified
	* src/images/NWeb_Mainz_MidLight.png: added
	* src/images/favicon.ico: added
	* src/images/NWeb_Mainz_Bkgd.png: added
	* src/images/NWeb_Mainz_Mid.png: added
	* src/data/NWeb-Print_Default.css: added
	* src/data/NWeb-Screen_Basic-Lilac.css: added
	* src/data/NWeb-Screen_Basic-Cypress.css: added
	* src/data/NWeb-Screen_Sharp.css: added
	* src/data/main1.css: removed
	* src/data/NWeb-Screen_Mainz.css: added
	* src/data/main2.css: removed
	* src/data/main3.css: removed
	* src/data/main4.css: removed
	* src/data/NWeb-Screen_Basic-Spruce.css: added
	* src/data/main5.css: removed
	* src/data/main6.css: removed
	* src/data/NWeb-Screen_Nebraska.css: added
	* src/data/NWeb-Screen_Basic-Ash.css: added
	* src/data/NWeb-Screen_Basic-Peach.css: added
	0001803: Narrative Web Report Update
	Multiple updates to improve the narrative web report.
